@startuml ERD for Database
title Lesson Scheduling System

skinparam linetype ortho

!define PK <&key>
!define FK <&link-intact>

entity City {
    PK CI_ID: int
    --
    CI_NAME: string
    CI_PROVINCE: string 
}

entity Location {
    PK L_ID: int
    --
    L_FACILITY: string
    L_ROOM_NAME: string
    L_TYPE: string
    FK CI_ID: int
}

entity Admin {
    PK A_ID: int
    --
    A_NAME: string
    A_USERNAME: string
    A_PASSWORD: string
}
entity Admin_Session {
    PK AS_UUID: UUID
    --
    AS_CREATED_AT: Timestamp
    FK A_ID: int
}

entity Client {
    PK C_ID: int
    --
    C_NAME: string
    C_USERNAME: string
    C_PASSWORD: string
    C_AGE: int
    FK GUARDIAN_ID: int
}

entity Instructor {
    PK I_ID: int
    --
    I_NAME: string
    I_USERNAME: string
    I_PASSWORD: string
    I_PHONE: string
}
entity Instructor_City{
    PK FK I_ID: int
    PK FK CI_ID: int
}

entity Specialization {
    PK S_ID: int
    --
    S_NAME: string
}
entity Instructor_Specialization {
    PK FK I_ID: int
    PK FK S_ID: int
}

entity Schedule {
    PK SC_ID: int
    --
    SC_START_DATE: Date
    SC_END_DATE: Date
}
entity Time_Slot {
    PK TS_ID: int
    --
    TS_DAY: DAY_OF_WEEK
    TS_START_TIME: Timestamp
    TS_END_TIME: Timestamp
    FK SC_ID: int
}

entity Offering {
    PK O_ID: int
    --
    O_LESSON: string
    O_MAX_CAPACITY: int
    O_CURRENT_CAPACITY: int
    O_IS_PRIVATE: boolean
    FK I_ID: int
    FK L_ID: int
    FK SC_ID: int
}

entity Booking {
    PK FK C_ID: int
    PK FK O_ID: int
}

' Relationships
Offering }o-up-|| Instructor
Offering ||--|{ Booking
Offering }o-|| Location
Offering ||--|| Schedule

Booking }|--|| Client

City ||-o{ Location
City ||-|{ Instructor_City

Schedule ||--|{ Time_Slot

Instructor ||-right-|{ Instructor_City
Instructor ||-left-|{ Instructor_Specialization

Instructor_Specialization }|--|| Specialization

Admin ||--o| Admin_Session

' Position Admin
Location ||-|| Empty
Empty -- Admin
hide Empty
@enduml
